# f3l-lang

./: .gitignore  LICENSE  Makefile  README.md  SUMMARY.md  f3l.opam
docs/: contract-interoperability.md  control-flow.md  def.md  expressions.md  function-and-constant.md  grammar.ebnf  modules.md  stdlib.md  types.md
docs/types/: base-types.md  composed-types.md  untitled.md
lib/: .merlin  compiler.ml  dune  intermediate.ml  passes.ml
lib/helpers/: dune  errors.ml
src/: dune  f3l.ml
stdlib/: bool.ml  fa12_know.yallo  frp.ml  lazy.ml  list.ml  option.ml  pair.ml  stdlib.ml
test/: dune  mytest.ml  test.ml
test/compiler/: comment.ml  comment_multiline.ml  comments.yallo  extern.yallo  external.ml  external_def.ml  external_fun.ml
test/def/: def.ml  def.yallo  enum.ml  enum.yallo  enum_dup_fail.ml  enum_typed.ml  enum_typed_fail.ml  expr.ml  expr.yallo  infer.ml  infer.yallo  lambda.ml  lambda.yallo  lambda_fail.ml  lambda_fail.yallo  let_expr.ml  let_expr.yallo  let_infer.ml  let_infer.yallo  numeric.ml  numeric.yallo  string.ml  string.yallo  union.ml  union_dup_fail.ml  union_opt_typedef.ml  union_typed.ml  union_typed_fail2.ml
test/expr/: assoc_bool.ml  assoc_bool.yallo  lambda.ml  lambda.yallo  lazy.ml  lazy.yallo  literal.ml  literal.yallo  literal_untyped.ml  literal_untyped.yallo  match_case.ml  match_case.yallo  neg_fail.ml  neg_fail.yallo  pack_unpack.ml  pack_unpack.yallo  pair_destruct_typed.ml  pair_destruct_untyped.ml  pair_fstsnd.ml  pair_fstsnd_fail.ml  pair_lst.ml  pair_opt.ml  rec.ml  record.ml  record.yallo  (+4 more)
vsext/: package.json
(+94 files in other folders)
