opam-version: "2.0"
name: "f3l-lang"
version: "0.1.5"
synopsis: "F3L language"
description: """
A low level function language inspired by Ocaml and yallo-lang.
"""
maintainer: "Davide Gessa <gessadavide@gmail.com>"
authors: [
  "Davide Gessa <gessadavide@gmail.com>"
]

homepage: "https://github.com/dakk/f3l-lang"
bug-reports: "https://github.com/dakk/f3l-lang/issues"
license: "MIT"
dev-repo: "git+https://github.com/dakk/f3l-lang.git"
build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "ocaml" {>= "4.12.0"}
  
  "dune" {>= "3.0.3"}
  "menhir" {>= "20220210"}
  "obelisk" {>= "0.6.0"}
  "ppx_jane" {>= "0.15.0"}
  "core" {>= "0.15.0"}
  "core_unix" {>= "0.15.0"}
  "ppx_deriving" {>= "5.2.1"}

  "ounit" {with-test & >= "2.2.6"}
  "alcotest" {with-test & >= "1.5.0"}
]

depexts: [
]
